--- a/user/themes/notepad/templates/partials/navigation.html.twig
+++ b/user/themes/notepad/templates/partials/navigation.html.twig
@@ -15,6 +15,6 @@
                     {% endif %}
                     <li><a href="{{ domain }}{{ link.url }}" {% if link.url | contains('http') %}target="_blank"{% endif %}>{{ link.title }}</a></li>
         {% endfor %}
-        <li><a href="{{ base_url }}/blog" title="Archives"><i class="icon-rss"></i>Sehat</a></li>
+        <li><a href="{{ base_url }}/blog" title="Archives"><i class="icon-rss"></i>Blog</a></li>
     </ul>
 </div>
